--- a/D2/D2.md
+++ b/D2/D2.md
@@ -36,8 +36,9 @@ Write a program to calculate the area and circumference of a circle given its ra
 **Code:**  
 ```c
 #include <stdio.h>
-#define PI 3.14159
+
 int main(){
+    float PI = 3.14159;
     float r, area, circumference;
     printf("Enter the radius of the circle: ");
     scanf("%f", &r);
