--- a/D54/D54.md
+++ b/D54/D54.md
@@ -6,17 +6,35 @@ Write a Program to take a positive integer n as input, and find the pivot intege
 
 
 **Concept Used**
-- 
+- For O(1): Sum of AP
+- For O(logn): Binarary Search
 
 **Code:**  
 ```c
-// Your C solution here
+#include <stdio.h>
+#include <math.h>
+int main(){
+    int  n;
+    printf("Enter Number: ");
+    scanf("%d",&n);
+    // O(1) TN method using Sum of AP
+    int pivot =-1;
+    double y=(n*(n+1)/2);
+    double x=sqrt(y);
+
+    if(x == (int)x){
+        pivot=(int)x;
+    }
+    printf("Pivot: %d",pivot);
+    return 0;
+    
+}
 ```
 
 **Sample Output:**  
 ```
-Input:  
-(Output after running the program)
+Enter Number: 8
+Pivot: 6
 ```
 
 ---
