--- a/D62/D62.md
+++ b/D62/D62.md
@@ -5,18 +5,49 @@
 Write a program to take an integer array arr as input. The task is to find the maximum sum of any contiguous subarray using Kadane's algorithm. Print the maximum sum as output. If all elements are negative, print the largest (least negative) element.
 
 **Concept Used**
-- Kadane's Algorithm
+- [Kadane's Algorithm](https://www.topcoder.com/thrive/articles/kadanes-algorithms) - if at any point current sum becomes less than zero then its sure that it will lower the sum so we change current sum to zero again and continue
 
 **Code:**  
 ```c
-// Your C solution here
+#include <stdio.h>
+int main(){
+    int n;
+    printf("Enter n: ");
+    scanf("%d",&n);
+    int arr[n];
+    printf("Enter elements: ");
+    for(int i=0;i<n;i++){
+        scanf("%d",&arr[i]);
+    }
+
+
+    //kadanes's algo
+    int maxSum=arr[0];
+    int curSum=0;
+    for(int i=0;i<n;i++){
+        curSum+=arr[i];
+        if(maxSum < curSum){
+            maxSum= curSum;
+        }
+        if(curSum<0){
+            curSum=0;
+        }
+    }
+    printf("Max sum: %d ",maxSum);
+    return 0;
+}
 ```
 
 **Sample Output:**  
 ```
-Input:  
-(Output after running the program)
-```
+Enter n: 2 
+Enter elements: -2 -4
+Max sum: -2 
 
+
+Enter n: 7
+Enter elements: 2 3 -8 7 -1 2 3
+Max sum: 11 
+```
 ---
 
