--- a/D60/D60.md
+++ b/D60/D60.md
@@ -11,13 +11,64 @@ Write a program to take an integer array arr and an integer k as inputs. The tas
 
 **Code:**  
 ```c
-// Your C solution here
+#include <stdio.h>
+int main(){
+    int n;
+    printf("Enter n: ");
+    scanf("%d",&n);
+    int arr[n];
+    printf("Enter elements: ");
+    for(int i=0;i<n;i++){
+        scanf("%d",&arr[i]);
+    }
+    
+    int k;
+    printf("Enter k: ");
+    scanf("%d",&k);
+
+    int dequeue[n];
+    int front =0;
+    int rear=0;
+
+    // initial dequeue
+    for(int i=0;i<k;i++){
+        while(front<rear && arr[i]>arr[dequeue[rear-1]]){
+            rear--;
+        }
+
+        dequeue[rear++] = i;
+    }
+
+    printf("%d ", arr[dequeue[front]]);
+    for(int i=k;i<n;i++){
+        //remove elements outside of window
+        while(front<rear && dequeue[front] < i-k){
+            front++;
+        }
+
+        //removing smaller elements
+        while (front<rear  && arr[i]>arr[dequeue[rear-1]]){
+            rear--;
+        }
+
+        dequeue[rear++] =i;
+
+        printf(" %d ",arr[dequeue[front]]);
+        
+        
+    }
+
+    return 0;
+
+}
 ```
 
 **Sample Output:**  
 ```
-Input:  
-(Output after running the program)
+Enter n: 9
+Enter elements: 1 2 3 1 4 5 2 3 6
+Enter k: 3
+3  3  4  5  5  5  6 
 ```
 
 ---
